GBS-3955 Upgrade JBoss version (from EAP 6.1.0 Alpha to EAP 6.4.0 GA).    - also upgrade to jdk 1.8.0_45.